--- a/src/components/Dots/Dots.css
+++ b/src/components/Dots/Dots.css
@@ -3,11 +3,12 @@
   gap: 2px;
   align-items: center;
   justify-content: center;
+  padding: 0 6px;
 }
 
 .dots div {
-  width: 5px;
-  height: 5px;
+  width: 4px;
+  height: 4px;
   background-color: rgb(199, 199, 199);
   border-radius: 9999px;
 }
