--- a/src/components/Auth-Layout/AuthLayout.css
+++ b/src/components/Auth-Layout/AuthLayout.css
@@ -5,7 +5,8 @@
   gap: 20px 0;
   padding: 40px 80px;
   border-radius: 6px;
-  box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.44);
+  box-shadow: 0 0 4px 1px rgba(0, 0, 0, 0.8) inset;
+  background-color: rgb(255, 255, 255);
 }
 
 .body {
