--- a/src/components/ContextMenu/ContextMenu.css
+++ b/src/components/ContextMenu/ContextMenu.css
@@ -16,6 +16,7 @@
   padding: 2px 10px;
   padding-left: 4px;
   cursor: pointer;
+  text-wrap: nowrap;
 
   &:last-child {
     border-bottom: none;
