--- a/src/components/Dots/Dots.css
+++ b/src/components/Dots/Dots.css
@@ -1,14 +1,15 @@
 .dots {
   display: flex;
-  gap: 2px;
+  gap: .5px;
   align-items: center;
   justify-content: center;
   padding: 0 6px;
 }
 
 .dots div {
-  width: 4px;
-  height: 4px;
+  width: 6px;
+  height: 6px;
   background-color: rgb(199, 199, 199);
   border-radius: 9999px;
+  transform: scale(.7);
 }
