--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -52,6 +52,7 @@
   display: flex;
   justify-content: space-between;
   align-items: end;
+  height: 30px;
 }
 
 .item-actions {
@@ -72,7 +73,7 @@
   gap: 4px;
 }
 
-.item-participant {
+.item-participant-avatar {
   width: 30px;
   height: 30px;
   border-radius: 9999px;
