--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -14,4 +14,50 @@
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   gap: 10px;
+  height: 100%;
+}
+
+.modal .item-body {
+  min-height: 100px;
+}
+
+.modal h4 {
+  margin-bottom: 12px;
+}
+
+.item-changelog-container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.item-changelog {
+  color: rgb(227, 210, 210)
+}
+
+.item-participants-container {
+  width: 60%;
+  padding: 4px 10px;
+}
+
+.modal .item-participants {
+  display: flex;
+  flex-direction: column;
+  row-gap: 6px;
+  overflow-y: auto;
+  max-height: 160px;
+  padding: 2px;
+}
+
+.modal .item-participant {
+  display: flex;
+  align-items: center;
+  column-gap: 6px;
+  padding: 2px;
+}
+
+.item-participant-username {
+  max-width: 220px;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
