--- a/src/App.css
+++ b/src/App.css
@@ -54,3 +54,43 @@
 .plus-button {
   position: relative;
 }
+
+.tags {
+  display: flex;
+  align-items: center;
+  column-gap: 10px;
+  height: 16px;
+}
+
+.tag {
+  width: 50px;
+  text-align: center;
+  border-radius: 25px;
+  box-shadow: 0 0 2px .1px rgba(0, 0, 0, 0.4);
+  font-size: 11px;
+  font-weight: 600;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.participants {
+  display: flex;
+  gap: 4px;
+}
+
+.participant-avatar {
+  width: 30px;
+  height: 30px;
+  border-radius: 9999px;
+  border: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0 0 2px 1px rgba(133, 133, 133, 0.3);
+}
+
+.participant img {
+  width: 30px;
+  height: 30px;
+  border-radius: 9999px;
+}
