--- a/src/components/Ticket/Ticket.css
+++ b/src/components/Ticket/Ticket.css
@@ -1,4 +1,4 @@
-.item {
+.ticket {
   border: 1px solid rgba(0, 0, 0, 0.195);
   border-radius: 6px;
   user-select: none;
@@ -11,31 +11,13 @@
   background-color: white;
 }
 
-.item button {
+.ticket button {
   padding: 0;
   background: transparent;
   color: gray;
 }
 
-.item-tags {
-  display: flex;
-  align-items: center;
-  column-gap: 10px;
-  height: 16px;
-}
-
-.item-tag {
-  width: 50px;
-  text-align: center;
-  border-radius: 25px;
-  box-shadow: 0 0 2px .1px rgba(0, 0, 0, 0.4);
-  font-size: 11px;
-  font-weight: 600;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
-.item-body {
+.ticket-content {
   word-break: break-all;
   display: -webkit-box;
   -webkit-line-clamp: 3;
@@ -48,44 +30,27 @@
   box-shadow: 0 0 2px .1px rgb(151, 151, 151) inset;
 }
 
-.item-footer {
+.ticket-footer {
   display: flex;
   justify-content: space-between;
   align-items: end;
   height: 30px;
 }
 
-.item-actions {
+.ticket-actions {
   display: flex;
   align-items: flex-end;
   font-size: 14px;
   height: 100%;
 }
 
-.item-actions-wrapper {
+.ticket-actions-wrapper {
   display: flex;
   align-items: center;
   gap: 6px;
 }
 
-.item-participants {
+.ticket-participants {
   display: flex;
-  gap: 4px;
-}
-
-.item-participant-avatar {
-  width: 30px;
-  height: 30px;
-  border-radius: 9999px;
-  border: none;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  box-shadow: 0 0 2px 1px rgba(133, 133, 133, 0.3);
-}
-
-.item-participant img {
-  width: 30px;
-  height: 30px;
-  border-radius: 9999px;
+  column-gap: 4px;
 }
