feature: Added types for project context.
Added types for data and functions that project context,
providing and updated the affected components accordingly.

Renamed few variables for better readability and more accuracy.

Added Dots to ticket participants to indicate,
if there are 2 or more participants.

Restyled container title for better readability,
though it might changes again.

--- a/src/components/Container/Container.css
+++ b/src/components/Container/Container.css
@@ -16,9 +16,10 @@
 }
 
 .container-title {
-  font-size: large;
-  font-weight: 500;
-  width: 90%;
+  font-size: 1.4rem;
+  font-weight: 1000;
+  width: 100%;
+  -webkit-text-stroke: 1px rgba(255, 255, 255, 0.5);
   overflow: hidden;
   text-overflow: ellipsis;
 }
