--- a/src/pages/Projects.css
+++ b/src/pages/Projects.css
@@ -1,15 +1,18 @@
 .projects-container {
   display: flex;
-  flex-wrap: wrap;
+  justify-content: start;
+  flex-direction: column;
+  height: 100%;
   gap: 10px;
-  justify-content: center;
-  overflow-y: auto;
   padding: 20px 0;
 }
 
 .projects-wrapper {
+  height: 100%;
+  width: inherit;
   display: flex;
   flex-wrap: wrap;
   gap: 30px;
   justify-content: center;
+  overflow-y: auto;
 }
