--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -4,7 +4,7 @@
   gap: 6px;
   min-width: 700px;
   max-width: 800px;
-  height: 500px;
+  min-height: 100%;
   padding: 20px;
   border-radius: 6px;
   background-color: white;
@@ -20,7 +20,6 @@
 
 .modal-content {
   min-height: 100px;
-  height: 100%;
 }
 
 .modal-footer {
@@ -31,26 +30,26 @@
   margin-bottom: 12px;
 }
 
-.changelog {
+.activity {
   width: 100%;
   display: flex;
   flex-direction: column;
   row-gap: 4px;
 }
 
-.changelog-container {
+.activity-container {
   color: rgb(177, 177, 177);
 }
 
-.changelog .participant-avatar {
+.activity .participant-avatar {
   width: 20px;
   height: 20px;
   font-size: 12px;
 }
 
-.changelog-content {}
+.activity-content {}
 
-.changelog-reviser {}
+.activity-reviser {}
 
 .modal .participants {
   display: flex;
