--- a/src/components/Input/Input.css
+++ b/src/components/Input/Input.css
@@ -1,12 +1,26 @@
 input {
-  height: 30px;
-  min-width: 230px;
-  width: 100%;
   padding: 20px 10px;
   border: 1px solid white;
   border-radius: 6px;
   background: rgba(255, 255, 255, 0.418);
+}
+
+.container-input {
+  height: 30px;
+  min-width: 230px;
+  width: 100%;
   font-size: 20px;
   font-weight: 600;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+}
+
+.auth-input {
+  margin-left: 10px;
+  padding: 10px 15px;
+  font-size: 16px;
+  border: none;
+  outline: none;
+  border-radius: 6px;
+  box-shadow: 0 0 4px 1px rgba(0, 0, 0, 0.333) inset;
+  background-color: rgba(91, 93, 117, 0.1);
 }
