--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -13,7 +13,7 @@
 
 .modal-tags {
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
+  grid-template-columns: repeat(5, 50px);
   gap: 10px;
   height: 100%;
 }
@@ -38,7 +38,7 @@
 }
 
 .activity-container {
-  color: rgb(177, 177, 177);
+  color: rgb(145, 132, 132);
 }
 
 .activity .participant-avatar {
