--- a/src/pages/Project.css
+++ b/src/pages/Project.css
@@ -14,6 +14,12 @@
   width: 100%;
 }
 
+.project-title {
+  font-size: 22px;
+  font-weight: 600;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
 .project-options {
   display: flex;
   gap: 10px;
@@ -25,7 +31,6 @@
   justify-content: center;
   border-radius: 9999px;
   box-shadow: 0 0 2px 1px rgba(151, 151, 151, 0.36);
-  background-color: #ADA8B6;
   width: 35px;
   height: 35px;
 }
@@ -33,11 +38,10 @@
 .project-body {
   display: flex;
   align-items: flex-start;
-  gap: 30px;
+  gap: 16px;
   padding: 20px;
   overflow: auto;
-  height: calc(100vh - 31px);
-  max-height: calc(100% - 81px);
+  height: 100vh;
 }
 
 .error-message {
