--- a/src/pages/Projects.css
+++ b/src/pages/Projects.css
@@ -8,11 +8,20 @@
 }
 
 .projects-wrapper {
-  height: 100%;
-  width: inherit;
   display: flex;
-  flex-wrap: wrap;
   gap: 30px;
+  align-items: center;
   justify-content: center;
-  overflow-y: auto;
+  flex-wrap: wrap;
+  padding-bottom: 30px;
+}
+
+.projects-header {
+  margin-left: 120px;
+  font-size: 1.4rem;
+  font-weight: 1000;
+  width: 100%;
+  -webkit-text-stroke: 1px rgba(255, 255, 255, 0.5);
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
