--- a/src/pages/Projects.css
+++ b/src/pages/Projects.css
@@ -1,27 +1,32 @@
 .projects-container {
   display: flex;
-  justify-content: start;
   flex-direction: column;
+  min-width: 416px;
+  width: 100%;
+  max-width: 1716px;
   height: 100%;
-  gap: 10px;
-  padding: 20px 0;
+  padding: 0 60px;
+}
+
+.projects-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 30px 0;
+}
+
+.projects-header-title {
+  font-size: 1.4rem;
+  font-weight: 1000;
+  -webkit-text-stroke: 1px rgba(255, 255, 255, 0.5);
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .projects-wrapper {
   display: flex;
-  gap: 30px;
-  align-items: center;
-  justify-content: center;
+  gap: 24px;
   flex-wrap: wrap;
+  justify-content: flex-start;
   padding-bottom: 30px;
-}
-
-.projects-header {
-  margin-left: 120px;
-  font-size: 1.4rem;
-  font-weight: 1000;
-  width: 100%;
-  -webkit-text-stroke: 1px rgba(255, 255, 255, 0.5);
-  overflow: hidden;
-  text-overflow: ellipsis;
 }
