--- a/src/pages/Projects.css
+++ b/src/pages/Projects.css
@@ -24,9 +24,8 @@
 }
 
 .projects-wrapper {
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
   gap: 24px;
-  flex-wrap: wrap;
-  justify-content: flex-start;
   padding-bottom: 30px;
 }
