--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,6 +1,6 @@
 .navbar-container {
   display: flex;
-  height: 50px;
+  height: 52px;
   width: 100%;
   justify-content: space-between;
   align-items: center;
@@ -38,16 +38,22 @@
   align-items: center;
 }
 
+.burger-menu {
+  padding-left: 12px;
+  padding-top: 2px;
+  align-self: center;
+}
+
 .navbar-profile a {
   display: flex;
   flex-direction: row-reverse;
   align-items: center;
-  padding: 8px 12px;
+  padding: 12px;
 }
 
 
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 606px) {
   .navbar-container.open {
     height: 100vh;
     width: 100%;
@@ -56,6 +62,12 @@
     justify-content: flex-start;
     flex-direction: column;
     z-index: 2;
+  }
+
+  .navbar-sm {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
   }
 
   .navbar-container.open ul {
