--- a/src/App.css
+++ b/src/App.css
@@ -94,3 +94,9 @@
   height: 30px;
   border-radius: 9999px;
 }
+
+@media screen and (max-width: 768px) {
+  .main-container {
+    display: block;
+  }
+}
