--- a/src/App.css
+++ b/src/App.css
@@ -37,13 +37,16 @@
 
 .button {
   cursor: pointer;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 
   &:hover {
-    transform: scale(1.1);
+    transform: scale(1.04);
   }
 
   &:active {
-    transform: scale(.9);
+    transform: scale(.98);
   }
 }
 
