--- a/src/components/ProjectHeader/ProjectHeader.css
+++ b/src/components/ProjectHeader/ProjectHeader.css
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  border-bottom: 1px solid black;
+  box-shadow: 0 0 4px .1px black;
   padding: 5px 10px;
   background-color: rgba(255, 255, 255, 0.336);
   width: 100%;
