--- a/src/components/Input/Input.css
+++ b/src/components/Input/Input.css
@@ -1,5 +1,5 @@
 input {
-  padding: 20px 10px;
+  padding: 10px;
   border: 1px solid white;
   border-radius: 6px;
   background: rgba(255, 255, 255, 0.418);
@@ -15,6 +15,7 @@ input {
 
 .container-input {
   font-size: 20px;
+  padding: 20px 10px;
 }
 
 .card-input {
@@ -30,4 +31,20 @@ input {
   border-radius: 6px;
   box-shadow: 0 0 4px 1px rgba(0, 0, 0, 0.333) inset;
   background-color: rgba(91, 93, 117, 0.1);
+}
+
+input[type="color"] {
+  padding: 5px;
+  width: 100%;
+  height: 50px;
+  align-self: center;
+}
+
+input[type="color"]::-webkit-color-swatch-wrapper {
+  padding: 0;
+}
+
+input[type="color"]::-webkit-color-swatch {
+  border: none;
+  border-radius: 4px;
 }
