--- a/src/components/Sidebar/NewThemeForm/NewThemeForm.css
+++ b/src/components/Sidebar/NewThemeForm/NewThemeForm.css
@@ -8,3 +8,12 @@
   flex-direction: column;
   gap: 10px
 }
+
+
+.form-divider {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  min-height: 14px;
+}
