--- a/src/components/Dots/Dots.css
+++ b/src/components/Dots/Dots.css
@@ -1,10 +1,12 @@
 .dots {
+  position: relative;
   display: flex;
-  gap: .5px;
   align-items: center;
   justify-content: center;
-  padding: 0 6px;
-  position: relative;
+  gap: .5px;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
 }
 
 .dots div {
