--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -2,13 +2,25 @@
   display: flex;
   flex-direction: column;
   gap: 6px;
-  min-width: 700px;
-  max-width: 800px;
+  width: 100%;
+  max-width: 830px;
   min-height: 100%;
   padding: 20px;
   border-radius: 6px;
   background-color: white;
   box-shadow: 0 0 6px 1px rgb(107, 107, 107);
+}
+
+.modal.card {
+  min-width: 600px;
+}
+
+.modal.container {
+  min-width: 500px;
+}
+
+.modal.theme {
+  min-width: 400px;
 }
 
 .modal-tags {
@@ -76,4 +88,16 @@
   max-width: 220px;
   overflow: hidden;
   text-overflow: ellipsis;
+}
+
+.modal-wrapper {
+  display: flex;
+  gap: 20;
+  justify-content: center;
+}
+
+.container-modal-actions {
+  display: flex;
+  gap: 30px;
+  justify-content: center;
 }
